@startuml


entity u_user {
    user_id : bigint <<PK>>
    --
    username : varchar(50)
    email : varchar(200)
    password : char(100)
    profile_picture : bytea
}

entity task {
    task_id : bigint <<PK>>
    --
    author_id : bigint <<FK>>
    title : varchar(200)
    description : varchar(4096)
    reward : smallint
    effort : smallint
    location : varchar(100)
    created_at : timestamp <<default: now()>>
}


entity application {
  user_id : bigint <<FK, PK>>
  task_id : bigint <<FK, PK>>
  --
  created_at : timestamp <<default: now()>>
}

entity image {
  image_id : bigint <<PK>>
  --
  task_id : bigint <<FK>>
  path : varchar(100)
  order : smallint <<default: 0>>
}

task ||--o{ image

u_user ||-right-o{ task : "author"

task ||--o{ application : "applies"
application }o--|| u_user : "applies to"


@enduml